--- a/src/app/_assets/globals.css
+++ b/src/app/_assets/globals.css
@@ -1,3 +1,15 @@
 body {
-  background: var(--tg-theme-secondary-bg-color, white);
+  background: var(--tg-theme-bg-color, white);
+}
+
+/* Chrome, Safari and Opera */
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+.no-scrollbar {
+  -ms-overflow-style: none;
+  /* IE and Edge */
+  scrollbar-width: none;
+  /* Firefox */
 }
