change avatar image component

--- a/src/app/_assets/globals.css
+++ b/src/app/_assets/globals.css
@@ -1,3 +1,7 @@
+body {
+  background: var(--tg-theme-bg-color, white);
+}
+
 /* Chrome, Safari and Opera */
 .no-scrollbar::-webkit-scrollbar {
   display: none;
