--- a/src/app/_assets/globals.css
+++ b/src/app/_assets/globals.css
@@ -1,6 +1,6 @@
-body {
+/* body {
   background: var(--tg-theme-bg-color, white);
-}
+} */
 
 /* Chrome, Safari and Opera */
 .no-scrollbar::-webkit-scrollbar {
