--- a/src/app/_assets/globals.css
+++ b/src/app/_assets/globals.css
@@ -1,5 +1,6 @@
 body {
-  background: var(--tg-theme-bg-color, white);
+  /*background: var(--tg-theme-bg-color, white);*/
+  background: #FF0000;
 }
 
 /* Chrome, Safari and Opera */
