change avatar image component

--- a/src/app/_assets/globals.css
+++ b/src/app/_assets/globals.css
@@ -1,6 +1,6 @@
 body {
   /*background: var(--tg-theme-bg-color, white);*/
-  background: #FF0000;
+  background: transparent;
 }
 
 /* Chrome, Safari and Opera */
