--- a/src/app/_assets/globals.css
+++ b/src/app/_assets/globals.css
@@ -1,6 +1,9 @@
+:root {
+  --tg-theme-bg-color: var(--tg-theme-background-color);
+}
+
 body {
-  /*background: var(--tg-theme-bg-color, white);*/
-  background: transparent;
+  background: var(--tg-theme-bg-color, white);
 }
 
 /* Chrome, Safari and Opera */
